--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@
     flex-direction: column;
     width: auto;
     color: white;
-    height: 500px;
+    height: auto;
     justify-content:start;
     align-items: center;
     padding: 120px;
